# AttemptPersuadeEval

./: README.md  main.py  pyproject.toml
configs/: config.yaml
configs/experiment/: qwen35_08b_local_smoke.yaml
src/evaluate/: evaluate.py
src/generate_conversations/: generate.py
src/refusal_check/: refusal_check.py
tests/: test_refusal_check.py
